// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolshot components/ExpandableList/ExpandableList.tools.svelte: Albums 1`] = `
<div>
  <div
    class="max-w-900px svelte-1psz0lq"
  >
    <span
      class="undefined albums svelte-pgngt4"
    >
      <h3
        class="svelte-pgngt4"
      >
        5 albums
      </h3>
       
      <ul
        class="svelte-pgngt4"
      >
        <li
          class="svelte-pgngt4"
        >
           
          <span
            class="svelte-4mizr"
            role="article"
          >
            <div
              class="content svelte-4mizr"
            >
              <span
                class="artwork svelte-4mizr"
              >
                <img
                  alt="./cover.jpg"
                  class="h-full w-full rounded-sm svelte-1oz3k7v"
                  height="256"
                  loading="lazy"
                  src="./cover.jpg"
                  width="256"
                />
                 
                
              </span>
               
              <p
                class="controls svelte-4mizr"
              >
                 
                <button
                  class="primary iconOnly large svelte-11qpkf0"
                  data-testid="play"
                >
                  <i
                    class="material-icons svelte-11qpkf0"
                  >
                    play_arrow
                  </i>
                   
                   
                   
                </button>
                 
                <button
                  class="primary iconOnly large svelte-11qpkf0"
                  data-testid="enqueue"
                >
                  <i
                    class="material-icons svelte-11qpkf0"
                  >
                    playlist_add
                  </i>
                   
                   
                   
                </button>
              </p>
            </div>
             
            <header
              class="svelte-4mizr"
            >
              <h3
                class="svelte-4mizr"
              >
                Diamonds on the inside
              </h3>
               
              <h4
                class="svelte-yqtzij"
                slot="details"
              >
                by 
                <a
                  class="underlined"
                  href="#/artist/1"
                  onclick="event.stopPropagation()"
                >
                  Ben Harper
                </a>
                , 
                <a
                  class="underlined"
                  href="#/artist/2"
                  onclick="event.stopPropagation()"
                >
                  The Innocent Criminals
                </a>
                
                 
              </h4>
            </header>
          </span>
           
        </li>
        <li
          class="svelte-pgngt4"
        >
           
          <span
            class="svelte-4mizr"
            role="article"
          >
            <div
              class="content svelte-4mizr"
            >
              <span
                class="artwork svelte-4mizr"
              >
                <img
                  alt="./cover.jpg"
                  class="h-full w-full rounded-sm svelte-1oz3k7v"
                  height="256"
                  loading="lazy"
                  src="./cover.jpg"
                  width="256"
                />
                 
                
              </span>
               
              <p
                class="controls svelte-4mizr"
              >
                 
                <button
                  class="primary iconOnly large svelte-11qpkf0"
                  data-testid="play"
                >
                  <i
                    class="material-icons svelte-11qpkf0"
                  >
                    play_arrow
                  </i>
                   
                   
                   
                </button>
                 
                <button
                  class="primary iconOnly large svelte-11qpkf0"
                  data-testid="enqueue"
                >
                  <i
                    class="material-icons svelte-11qpkf0"
                  >
                    playlist_add
                  </i>
                   
                   
                   
                </button>
              </p>
            </div>
             
            <header
              class="svelte-4mizr"
            >
              <h3
                class="svelte-4mizr"
              >
                Diamonds on the inside
              </h3>
               
              <h4
                class="svelte-yqtzij"
                slot="details"
              >
                by 
                <a
                  class="underlined"
                  href="#/artist/1"
                  onclick="event.stopPropagation()"
                >
                  Ben Harper
                </a>
                , 
                <a
                  class="underlined"
                  href="#/artist/2"
                  onclick="event.stopPropagation()"
                >
                  The Innocent Criminals
                </a>
                
                 
              </h4>
            </header>
          </span>
           
        </li>
        <li
          class="svelte-pgngt4"
        >
           
          <span
            class="svelte-4mizr"
            role="article"
          >
            <div
              class="content svelte-4mizr"
            >
              <span
                class="artwork svelte-4mizr"
              >
                <img
                  alt="./cover.jpg"
                  class="h-full w-full rounded-sm svelte-1oz3k7v"
                  height="256"
                  loading="lazy"
                  src="./cover.jpg"
                  width="256"
                />
                 
                
              </span>
               
              <p
                class="controls svelte-4mizr"
              >
                 
                <button
                  class="primary iconOnly large svelte-11qpkf0"
                  data-testid="play"
                >
                  <i
                    class="material-icons svelte-11qpkf0"
                  >
                    play_arrow
                  </i>
                   
                   
                   
                </button>
                 
                <button
                  class="primary iconOnly large svelte-11qpkf0"
                  data-testid="enqueue"
                >
                  <i
                    class="material-icons svelte-11qpkf0"
                  >
                    playlist_add
                  </i>
                   
                   
                   
                </button>
              </p>
            </div>
             
            <header
              class="svelte-4mizr"
            >
              <h3
                class="svelte-4mizr"
              >
                Diamonds on the inside
              </h3>
               
              <h4
                class="svelte-yqtzij"
                slot="details"
              >
                by 
                <a
                  class="underlined"
                  href="#/artist/1"
                  onclick="event.stopPropagation()"
                >
                  Ben Harper
                </a>
                , 
                <a
                  class="underlined"
                  href="#/artist/2"
                  onclick="event.stopPropagation()"
                >
                  The Innocent Criminals
                </a>
                
                 
              </h4>
            </header>
          </span>
           
        </li>
        <li
          class="svelte-pgngt4"
        >
           
          <span
            class="svelte-4mizr"
            role="article"
          >
            <div
              class="content svelte-4mizr"
            >
              <span
                class="artwork svelte-4mizr"
              >
                <img
                  alt="./cover.jpg"
                  class="h-full w-full rounded-sm svelte-1oz3k7v"
                  height="256"
                  loading="lazy"
                  src="./cover.jpg"
                  width="256"
                />
                 
                
              </span>
               
              <p
                class="controls svelte-4mizr"
              >
                 
                <button
                  class="primary iconOnly large svelte-11qpkf0"
                  data-testid="play"
                >
                  <i
                    class="material-icons svelte-11qpkf0"
                  >
                    play_arrow
                  </i>
                   
                   
                   
                </button>
                 
                <button
                  class="primary iconOnly large svelte-11qpkf0"
                  data-testid="enqueue"
                >
                  <i
                    class="material-icons svelte-11qpkf0"
                  >
                    playlist_add
                  </i>
                   
                   
                   
                </button>
              </p>
            </div>
             
            <header
              class="svelte-4mizr"
            >
              <h3
                class="svelte-4mizr"
              >
                Diamonds on the inside
              </h3>
               
              <h4
                class="svelte-yqtzij"
                slot="details"
              >
                by 
                <a
                  class="underlined"
                  href="#/artist/1"
                  onclick="event.stopPropagation()"
                >
                  Ben Harper
                </a>
                , 
                <a
                  class="underlined"
                  href="#/artist/2"
                  onclick="event.stopPropagation()"
                >
                  The Innocent Criminals
                </a>
                
                 
              </h4>
            </header>
          </span>
           
        </li>
        <li
          class="svelte-pgngt4"
        >
           
          <span
            class="svelte-4mizr"
            role="article"
          >
            <div
              class="content svelte-4mizr"
            >
              <span
                class="artwork svelte-4mizr"
              >
                <img
                  alt="./cover.jpg"
                  class="h-full w-full rounded-sm svelte-1oz3k7v"
                  height="256"
                  loading="lazy"
                  src="./cover.jpg"
                  width="256"
                />
                 
                
              </span>
               
              <p
                class="controls svelte-4mizr"
              >
                 
                <button
                  class="primary iconOnly large svelte-11qpkf0"
                  data-testid="play"
                >
                  <i
                    class="material-icons svelte-11qpkf0"
                  >
                    play_arrow
                  </i>
                   
                   
                   
                </button>
                 
                <button
                  class="primary iconOnly large svelte-11qpkf0"
                  data-testid="enqueue"
                >
                  <i
                    class="material-icons svelte-11qpkf0"
                  >
                    playlist_add
                  </i>
                   
                   
                   
                </button>
              </p>
            </div>
             
            <header
              class="svelte-4mizr"
            >
              <h3
                class="svelte-4mizr"
              >
                Diamonds on the inside
              </h3>
               
              <h4
                class="svelte-yqtzij"
                slot="details"
              >
                by 
                <a
                  class="underlined"
                  href="#/artist/1"
                  onclick="event.stopPropagation()"
                >
                  Ben Harper
                </a>
                , 
                <a
                  class="underlined"
                  href="#/artist/2"
                  onclick="event.stopPropagation()"
                >
                  The Innocent Criminals
                </a>
                
                 
              </h4>
            </header>
          </span>
           
        </li>
      </ul>
       
      <iframe
        aria-hidden="true"
        src="about:blank"
        style="display: block; position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; border: 0; opacity: 0; pointer-events: none; z-index: -1;"
        tabindex="-1"
      />
    </span>
    
     
    <div />
  </div>
</div>
`;

exports[`Toolshot components/ExpandableList/ExpandableList.tools.svelte: Artists 1`] = `
<div>
  <div
    class="max-w-900px svelte-1psz0lq"
  >
    <span
      class="undefined artists svelte-pgngt4"
    >
      <h3
        class="svelte-pgngt4"
      >
        5 artists
      </h3>
       
      <ul
        class="svelte-pgngt4"
      >
        <li
          class="svelte-pgngt4"
        >
           
          <span
            class="svelte-4mizr"
            role="article"
          >
            <div
              class="content svelte-4mizr"
            >
              <span
                class="artwork svelte-4mizr"
              >
                <img
                  alt="./avatar.jpg"
                  class="h-full w-full rounded-full svelte-1oz3k7v"
                  height="256"
                  loading="lazy"
                  src="./avatar.jpg"
                  width="256"
                />
                 
                
              </span>
               
              <p
                class="controls svelte-4mizr"
              >
                 
                <button
                  class="primary iconOnly large svelte-11qpkf0"
                  data-testid="play"
                >
                  <i
                    class="material-icons svelte-11qpkf0"
                  >
                    play_arrow
                  </i>
                   
                   
                   
                </button>
                 
                <button
                  class="primary iconOnly large svelte-11qpkf0"
                  data-testid="enqueue"
                >
                  <i
                    class="material-icons svelte-11qpkf0"
                  >
                    playlist_add
                  </i>
                   
                   
                   
                </button>
              </p>
            </div>
             
            <header
              class="svelte-4mizr"
            >
              <h3
                class="svelte-4mizr"
              >
                Foo Fighters
              </h3>
               
              <h4
                class="svelte-yqtzij"
                slot="details"
              >
                2 albums
              </h4>
            </header>
          </span>
           
        </li>
        <li
          class="svelte-pgngt4"
        >
           
          <span
            class="svelte-4mizr"
            role="article"
          >
            <div
              class="content svelte-4mizr"
            >
              <span
                class="artwork svelte-4mizr"
              >
                <img
                  alt="./avatar.jpg"
                  class="h-full w-full rounded-full svelte-1oz3k7v"
                  height="256"
                  loading="lazy"
                  src="./avatar.jpg"
                  width="256"
                />
                 
                
              </span>
               
              <p
                class="controls svelte-4mizr"
              >
                 
                <button
                  class="primary iconOnly large svelte-11qpkf0"
                  data-testid="play"
                >
                  <i
                    class="material-icons svelte-11qpkf0"
                  >
                    play_arrow
                  </i>
                   
                   
                   
                </button>
                 
                <button
                  class="primary iconOnly large svelte-11qpkf0"
                  data-testid="enqueue"
                >
                  <i
                    class="material-icons svelte-11qpkf0"
                  >
                    playlist_add
                  </i>
                   
                   
                   
                </button>
              </p>
            </div>
             
            <header
              class="svelte-4mizr"
            >
              <h3
                class="svelte-4mizr"
              >
                Foo Fighters
              </h3>
               
              <h4
                class="svelte-yqtzij"
                slot="details"
              >
                2 albums
              </h4>
            </header>
          </span>
           
        </li>
        <li
          class="svelte-pgngt4"
        >
           
          <span
            class="svelte-4mizr"
            role="article"
          >
            <div
              class="content svelte-4mizr"
            >
              <span
                class="artwork svelte-4mizr"
              >
                <img
                  alt="./avatar.jpg"
                  class="h-full w-full rounded-full svelte-1oz3k7v"
                  height="256"
                  loading="lazy"
                  src="./avatar.jpg"
                  width="256"
                />
                 
                
              </span>
               
              <p
                class="controls svelte-4mizr"
              >
                 
                <button
                  class="primary iconOnly large svelte-11qpkf0"
                  data-testid="play"
                >
                  <i
                    class="material-icons svelte-11qpkf0"
                  >
                    play_arrow
                  </i>
                   
                   
                   
                </button>
                 
                <button
                  class="primary iconOnly large svelte-11qpkf0"
                  data-testid="enqueue"
                >
                  <i
                    class="material-icons svelte-11qpkf0"
                  >
                    playlist_add
                  </i>
                   
                   
                   
                </button>
              </p>
            </div>
             
            <header
              class="svelte-4mizr"
            >
              <h3
                class="svelte-4mizr"
              >
                Foo Fighters
              </h3>
               
              <h4
                class="svelte-yqtzij"
                slot="details"
              >
                2 albums
              </h4>
            </header>
          </span>
           
        </li>
        <li
          class="svelte-pgngt4"
        >
           
          <span
            class="svelte-4mizr"
            role="article"
          >
            <div
              class="content svelte-4mizr"
            >
              <span
                class="artwork svelte-4mizr"
              >
                <img
                  alt="./avatar.jpg"
                  class="h-full w-full rounded-full svelte-1oz3k7v"
                  height="256"
                  loading="lazy"
                  src="./avatar.jpg"
                  width="256"
                />
                 
                
              </span>
               
              <p
                class="controls svelte-4mizr"
              >
                 
                <button
                  class="primary iconOnly large svelte-11qpkf0"
                  data-testid="play"
                >
                  <i
                    class="material-icons svelte-11qpkf0"
                  >
                    play_arrow
                  </i>
                   
                   
                   
                </button>
                 
                <button
                  class="primary iconOnly large svelte-11qpkf0"
                  data-testid="enqueue"
                >
                  <i
                    class="material-icons svelte-11qpkf0"
                  >
                    playlist_add
                  </i>
                   
                   
                   
                </button>
              </p>
            </div>
             
            <header
              class="svelte-4mizr"
            >
              <h3
                class="svelte-4mizr"
              >
                Foo Fighters
              </h3>
               
              <h4
                class="svelte-yqtzij"
                slot="details"
              >
                2 albums
              </h4>
            </header>
          </span>
           
        </li>
        <li
          class="svelte-pgngt4"
        >
           
          <span
            class="svelte-4mizr"
            role="article"
          >
            <div
              class="content svelte-4mizr"
            >
              <span
                class="artwork svelte-4mizr"
              >
                <img
                  alt="./avatar.jpg"
                  class="h-full w-full rounded-full svelte-1oz3k7v"
                  height="256"
                  loading="lazy"
                  src="./avatar.jpg"
                  width="256"
                />
                 
                
              </span>
               
              <p
                class="controls svelte-4mizr"
              >
                 
                <button
                  class="primary iconOnly large svelte-11qpkf0"
                  data-testid="play"
                >
                  <i
                    class="material-icons svelte-11qpkf0"
                  >
                    play_arrow
                  </i>
                   
                   
                   
                </button>
                 
                <button
                  class="primary iconOnly large svelte-11qpkf0"
                  data-testid="enqueue"
                >
                  <i
                    class="material-icons svelte-11qpkf0"
                  >
                    playlist_add
                  </i>
                   
                   
                   
                </button>
              </p>
            </div>
             
            <header
              class="svelte-4mizr"
            >
              <h3
                class="svelte-4mizr"
              >
                Foo Fighters
              </h3>
               
              <h4
                class="svelte-yqtzij"
                slot="details"
              >
                2 albums
              </h4>
            </header>
          </span>
           
        </li>
      </ul>
       
      <iframe
        aria-hidden="true"
        src="about:blank"
        style="display: block; position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; border: 0; opacity: 0; pointer-events: none; z-index: -1;"
        tabindex="-1"
      />
    </span>
    
  </div>
</div>
`;

exports[`Toolshot components/ExpandableList/ExpandableList.tools.svelte: Tracks 1`] = `
<div>
  <div
    class="max-w-900px svelte-1psz0lq"
  >
    <span
      class="undefined tracks svelte-pgngt4"
    >
      <h3
        class="svelte-pgngt4"
      >
        5 tracks
      </h3>
       
      <ul
        class="svelte-pgngt4"
      >
        <li
          class="svelte-pgngt4"
        >
          <div
            class="undefined root svelte-138dtrj"
          >
            <a
              class="svelte-138dtrj"
              href="#/album/1"
            >
              <img
                alt="./cover.jpg"
                class="h-16 w-16 text-xs actionable rounded-sm svelte-1oz3k7v"
                height="256"
                loading="lazy"
                src="./cover.jpg"
                width="256"
              />
               
              
            </a>
             
            <div
              class="track svelte-138dtrj"
            >
              <span
                class="title svelte-138dtrj"
              >
                Mama got a girlfriend
              </span>
               
              <span>
                <a
                  class="text-sm underlined"
                  href="#/artist/0"
                  onclick="event.stopPropagation()"
                >
                  Ben Harper
                </a>
              </span>
            </div>
             
             
            <span
              aria-expanded="false"
              aria-haspopup="menu"
              class="wrapper svelte-1g0595r"
            >
              <button
                class="iconOnly noBorder svelte-11qpkf0"
              >
                <i
                  class="material-icons svelte-11qpkf0"
                >
                  more_vert
                </i>
                 
                 
                
                 
              </button>
            </span>
             
            
          </div>
           
        </li>
        <li
          class="svelte-pgngt4"
        >
          <div
            class="undefined root svelte-138dtrj"
          >
            <a
              class="svelte-138dtrj"
              href="#/album/1"
            >
              <img
                alt="./cover.jpg"
                class="h-16 w-16 text-xs actionable rounded-sm svelte-1oz3k7v"
                height="256"
                loading="lazy"
                src="./cover.jpg"
                width="256"
              />
               
              
            </a>
             
            <div
              class="track svelte-138dtrj"
            >
              <span
                class="title svelte-138dtrj"
              >
                Mama got a girlfriend
              </span>
               
              <span>
                <a
                  class="text-sm underlined"
                  href="#/artist/0"
                  onclick="event.stopPropagation()"
                >
                  Ben Harper
                </a>
              </span>
            </div>
             
             
            <span
              aria-expanded="false"
              aria-haspopup="menu"
              class="wrapper svelte-1g0595r"
            >
              <button
                class="iconOnly noBorder svelte-11qpkf0"
              >
                <i
                  class="material-icons svelte-11qpkf0"
                >
                  more_vert
                </i>
                 
                 
                
                 
              </button>
            </span>
             
            
          </div>
           
        </li>
        <li
          class="svelte-pgngt4"
        >
          <div
            class="undefined root svelte-138dtrj"
          >
            <a
              class="svelte-138dtrj"
              href="#/album/1"
            >
              <img
                alt="./cover.jpg"
                class="h-16 w-16 text-xs actionable rounded-sm svelte-1oz3k7v"
                height="256"
                loading="lazy"
                src="./cover.jpg"
                width="256"
              />
               
              
            </a>
             
            <div
              class="track svelte-138dtrj"
            >
              <span
                class="title svelte-138dtrj"
              >
                Mama got a girlfriend
              </span>
               
              <span>
                <a
                  class="text-sm underlined"
                  href="#/artist/0"
                  onclick="event.stopPropagation()"
                >
                  Ben Harper
                </a>
              </span>
            </div>
             
             
            <span
              aria-expanded="false"
              aria-haspopup="menu"
              class="wrapper svelte-1g0595r"
            >
              <button
                class="iconOnly noBorder svelte-11qpkf0"
              >
                <i
                  class="material-icons svelte-11qpkf0"
                >
                  more_vert
                </i>
                 
                 
                
                 
              </button>
            </span>
             
            
          </div>
           
        </li>
        <li
          class="svelte-pgngt4"
        >
          <div
            class="undefined root svelte-138dtrj"
          >
            <a
              class="svelte-138dtrj"
              href="#/album/1"
            >
              <img
                alt="./cover.jpg"
                class="h-16 w-16 text-xs actionable rounded-sm svelte-1oz3k7v"
                height="256"
                loading="lazy"
                src="./cover.jpg"
                width="256"
              />
               
              
            </a>
             
            <div
              class="track svelte-138dtrj"
            >
              <span
                class="title svelte-138dtrj"
              >
                Mama got a girlfriend
              </span>
               
              <span>
                <a
                  class="text-sm underlined"
                  href="#/artist/0"
                  onclick="event.stopPropagation()"
                >
                  Ben Harper
                </a>
              </span>
            </div>
             
             
            <span
              aria-expanded="false"
              aria-haspopup="menu"
              class="wrapper svelte-1g0595r"
            >
              <button
                class="iconOnly noBorder svelte-11qpkf0"
              >
                <i
                  class="material-icons svelte-11qpkf0"
                >
                  more_vert
                </i>
                 
                 
                
                 
              </button>
            </span>
             
            
          </div>
           
        </li>
        <li
          class="svelte-pgngt4"
        >
          <div
            class="undefined root svelte-138dtrj"
          >
            <a
              class="svelte-138dtrj"
              href="#/album/1"
            >
              <img
                alt="./cover.jpg"
                class="h-16 w-16 text-xs actionable rounded-sm svelte-1oz3k7v"
                height="256"
                loading="lazy"
                src="./cover.jpg"
                width="256"
              />
               
              
            </a>
             
            <div
              class="track svelte-138dtrj"
            >
              <span
                class="title svelte-138dtrj"
              >
                Mama got a girlfriend
              </span>
               
              <span>
                <a
                  class="text-sm underlined"
                  href="#/artist/0"
                  onclick="event.stopPropagation()"
                >
                  Ben Harper
                </a>
              </span>
            </div>
             
             
            <span
              aria-expanded="false"
              aria-haspopup="menu"
              class="wrapper svelte-1g0595r"
            >
              <button
                class="iconOnly noBorder svelte-11qpkf0"
              >
                <i
                  class="material-icons svelte-11qpkf0"
                >
                  more_vert
                </i>
                 
                 
                
                 
              </button>
            </span>
             
            
          </div>
           
        </li>
      </ul>
       
      <iframe
        aria-hidden="true"
        src="about:blank"
        style="display: block; position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; border: 0; opacity: 0; pointer-events: none; z-index: -1;"
        tabindex="-1"
      />
    </span>
    
     
    <div />
  </div>
</div>
`;
